Added navbar skeleton and images
Added only the skeleton for the navbar, also the main images of the page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 
 <body>
     <header>
+        <nav class="navbar">
+          <div class="left_items">
+            <a href="#">
+              <i class="fa fa-bars"></i>
+            </a>
+            <a href="#">
+              <i class="fa fa-search"></i>
+            </a>
+            <a href="#" class="navbarTitle">SPACE & COSMOS</a>
+          </div>
+          <div class="centered_items">
+            <a href="https://www.nytimes.com/"> <img src="./images/nyt_logo.png" alt="New York Times Logo"></a>
+          </div>
+          <div class="right_items">
+            <a class="nav_button" href="https://www.nytimes.com/subscription?campaignId=797YR">LOG IN</a>
+            <a class="nav_button" href="https://www.nytimes.com/subscription?campaignId=797YR">SUBSCRIBE NOW</a>
+          </div>
+        </nav>
     </header>
     <main>        
     </main>
