--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
                     <i class="fa fa-facebook social-icon"></i>
                     <i class="fa fa-envelope social-icon"></i>
                     <i class="fa fa-reply social-icon"></i>
+                    <svg stroke="comm" width="16px" height="25px" viewBox="0 0 16 25" class="comm">
+                      <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                          <g stroke="#666" fill="none">
+                              <path fill="none"
+                                  d="M0.5,0.5 L0.5,24.5 L8.1716264,19.5137775 L15.5,24.4404006 L15.5,0.5 L0.5,0.5 Z">
+                              </path>
+                          </g>
+                      </g>
+                  </svg>
+                  <button type="button" class="chat-btn" aria-label="615 comments. Click to read and post comments." id="comments-speech-bubble-top">
+                      <i class="chat-i">
+                      <span class="chat-span">615</span>
+                  </i>
+                  </button>
                 </div>
                 <div class="headline">
                     <figure>
@@ -48,12 +62,11 @@
                             src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&auto=webp"
                             id="AlanGuth">
                         <figcaption>
-                            <span class="caption">Alan Guth was one of the first physicists to hypothesize the existence
+                            <p class="caption-inf">Alan Guth was one of the first physicists to hypothesize the existence
                                 of inflation,
                                 which explains how the universe expanded so uniformly and so quickly in the instant
                                 after the Big Bang
-                                13.8 billion years ago.</span>
-                            <span class="Credit">Rick Friedman for The New York Times</span>
+                                13.8 billion years ago.Rick Friedman for The New York Times</p>
                         </figcaption>
                     </figure>
                     <a href="http://www.nytimes.com/by/dennis-overbye">
@@ -349,11 +362,11 @@
                         src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-superJumbo.jpg?quality=90&auto=webp"
                         id="telescope">
                     <figcaption>
-                        <span class="caption">The Bicep2 telescope, in the foreground, was used to detect the faint
+                        <p class="caption">The Bicep2 telescope, in the foreground, was used to detect the faint
                             spiraling
                             gravity patterns — the signature of a universe being wrenched violently apart at its
-                            birth.</span>
-                        <span class="Credit">Steffen Richter/Associated Press</span>
+                            birth.</p>
+                        <p class="Credit">Steffen Richter/Associated Press</span>
                     </figcaption>
                 </figure>
             </div>
@@ -433,6 +446,39 @@
                     was not part of the team, “you wind up at inflation.”</p>
             </div>
         </article>
+        <div class="read-comments">
+          <button class="comment-button">READ 615 COMMENTS</button>
+          <aside class="comment-socials">
+              <aside class="social-inner">
+  
+                  <svg class="fb" viewBox="0 0 7 15" width="7" height="15">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M4.775 14.163V7.08h1.923l.255-2.441H4.775l.004-1.222c0-.636.06-.977.958-.977H6.94V0H5.016c-2.31 0-3.123 1.184-3.123 3.175V4.64H.453v2.44h1.44v7.083h2.882z"
+                          fill="#000"></path>
+                  </svg>
+  
+                  <svg viewBox="0 0 13 10" class="twi" width="13" height="10">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M5.987 2.772l.025.425-.429-.052c-1.562-.2-2.927-.876-4.086-2.011L.93.571.784.987c-.309.927-.111 1.906.533 2.565.343.364.266.416-.327.2-.206-.07-.386-.122-.403-.096-.06.06.146.85.309 1.161.223.434.678.858 1.176 1.11l.42.199-.497.009c-.481 0-.498.008-.447.19.172.564.85 1.162 1.606 1.422l.532.182-.464.277a4.833 4.833 0 0 1-2.3.641c-.387.009-.704.044-.704.07 0 .086 1.047.572 1.657.762 1.828.564 4 .32 5.631-.641 1.159-.685 2.318-2.045 2.859-3.363.292-.702.583-1.984.583-2.6 0-.398.026-.45.507-.927.283-.277.55-.58.6-.667.087-.165.078-.165-.36-.018-.73.26-.832.226-.472-.164.266-.278.584-.78.584-.928 0-.026-.129.018-.275.096a4.79 4.79 0 0 1-.755.294l-.464.148-.42-.286C9.66.467 9.335.293 9.163.24 8.725.12 8.055.137 7.66.276c-1.074.39-1.752 1.395-1.674 2.496z"
+                          fill="#000"></path>
+                  </svg>
+  
+                  <svg viewBox="0 0 15 9" class="msg" width="15" height="9">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M.906 8.418V0L5.64 4.76.906 8.419zm13 0L9.174 4.761 13.906 0v8.418zM7.407 6.539l-1.13-1.137L.907 9h13l-5.37-3.598-1.13 1.137zM1.297 0h12.22l-6.11 5.095L1.297 0z"
+                          fill="#000"></path>
+                  </svg>
+  
+                  <svg class="share" viewBox="0 0 16 13" width="16" height="13">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M15.406 5.359L8.978 0v3.215C3.82 3.215.406 8.107.406 12.66 1.653 9.133 4.29 7.517 8.978 7.517v3.2l6.428-5.358z"
+                          fill="#000"></path>
+                  </svg>
+
+
+              </aside>
+          </aside>
+      </div>
         
     </main>    
     
