adding the read comment section

--- a/index.html
+++ b/index.html
@@ -448,8 +448,7 @@
         </article>
         <div class="read-comments">
           <button class="comment-button">READ 615 COMMENTS</button>
-          <aside class="comment-socials">
-              <aside class="social-inner">
+          <div class="comment-socials">
   
                   <svg class="fb" viewBox="0 0 7 15" width="7" height="15">
                       <path fill-rule="evenodd" clip-rule="evenodd"
@@ -474,10 +473,7 @@
                           d="M15.406 5.359L8.978 0v3.215C3.82 3.215.406 8.107.406 12.66 1.653 9.133 4.29 7.517 8.978 7.517v3.2l6.428-5.358z"
                           fill="#000"></path>
                   </svg>
-
-
-              </aside>
-          </aside>
+          </div>
       </div>
         
     </main>    
