--- a/index.html
+++ b/index.html
@@ -123,22 +123,22 @@
             <aside>
                 <div class="editors-pick">
                     <h2>Editor's Pick</h2>
-                    <article class="editors-pick-article">
+                    <div class="editors-pick-article">
                         <img class="editors-pick-img" src="./images/editors-pick-01.jpg"
                             alt="Picture of POC male-presenting person smiling">
                         <a href="#">When Getting High Is a Hobby, Not a Habit</a>
-                    </article>
-                    <article class="editors-pick-article">
+                    </div>
+                    <div class="editors-pick-article">
                         <img class="editors-pick-img" src="./images/editors-pick-02.jpg"
                             alt="People crouching exercise">
                         <a href="#">An 11-Minute Body-Weight Workout With Proven Fitness Benefits
                         </a>
-                    </article>
-                    <article class="editors-pick-article">
+                    </div>
+                    <div class="editors-pick-article">
                         <img class="editors-pick-img" src="./images/editors-pick-03.jpg" alt="Skycrapers">
                         <a href="#">They Can’t Leave the Bay Area Fast Enough
                         </a>
-                    </article>
+                    </div>
                 </div>
             </aside>
             <div class="text_article">
@@ -366,7 +366,7 @@
                             spiraling
                             gravity patterns — the signature of a universe being wrenched violently apart at its
                             birth.</p>
-                        <p class="Credit">Steffen Richter/Associated Press</span>
+                        <span class="Credit">Steffen Richter/Associated Press</span>
                     </figcaption>
                 </figure>
             </div>
@@ -447,7 +447,7 @@
             </div>
         </article>
         <div class="read-comments">
-          <button class="comment-button">READ 615 COMMENTS</button>
+          <button type="button" class="comment-button">READ 615 COMMENTS</button>
           <div class="comment-socials">
   
                   <svg class="fb" viewBox="0 0 7 15" width="7" height="15">
