adjusted the form linter errors

--- a/index.html
+++ b/index.html
@@ -478,14 +478,14 @@
           <h1>Lets have a minute of your time</h1>
           <div class="form-div">
             <label for="name">Name here</label>
-            <input name="name" type="text" maxlength="25" required>
+            <input name="name" id="name" type="text" maxlength="25" required>
           </div>
           <div class="form-div">
             <label for="email">Email here</label>
-            <input name="email" type="text" maxlength="25" required>
+            <input name="email" type="text" id="email" maxlength="25" required>
           </div>
 
-          <textarea name="" id="" cols="30" rows="10" maxlength="250" placeholder="Type your comment here" required></textarea>
+          <textarea name="comment" id="comment" cols="30" rows="10" maxlength="250" placeholder="Type your comment here" required></textarea>
 
           <div class="form-div opinion">
             <label for="opinion">Your Opinion counts here</label>
