changes again to the form

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
           <div class="form-div opinion">
             <label for="opinion">Your Opinion counts here</label>
-            <div class="opi">
+            <div id="opinion" class="opi">
               <input type="radio" name="opinion">Positive
               <input type="radio" name="opinion">Negative
               <input type="radio" name="opinion">Neutral
