added webhint error correction

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <article id="story" class="articleContent">
             <header class="image_center">
-                <h1 class="main-tittle" id="articleHeadline">Space Ripples Reveal Big Bang's Smoking Gun</h1>
+                <h2 class="main-tittle" id="articleHeadline">Space Ripples Reveal Big Bang's Smoking Gun</h2>
                 <div class="social-share">
                     <i class="fa fa-twitter social-icon"></i>
                     <i class="fa fa-facebook social-icon"></i>
@@ -488,7 +488,7 @@
           <textarea name="comment" id="comment" cols="30" rows="10" maxlength="250" placeholder="Type your comment here" required></textarea>
 
           <div class="form-div opinion">
-            <label for="opinion">Your Opinion counts here</label>
+            <label>Your Opinion counts here</label>
             <div id="opinion" class="opi">
               <input type="radio" name="opinion">Positive
               <input type="radio" name="opinion">Negative
